# gesserit

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: release.yml
examples/: clip.py  ddg.py
gesserit/: __init__.py  core.py
gesserit/templates/: index.html
