[project]
name = "gesserit"
version = "0.1.0"
description = "Inspect retrieval results"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.14",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "lancedb>=0.24.0",
    "mypy>=1.16.1",
    "pylance>=0.31.0",
    "ruff>=0.12.2",
    "tantivy>=0.24.0",
]
