[project]
name = "gesserit"
version = "0.2.5"
description = "Inspect retrieval results"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "uvicorn>=0.22",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.16.1",
    "ruff>=0.12.2",
]


[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "gesserit"
module-root = ""
data = { "data"= "gesserit/templates" }
