[project]
name = "gesserit"
version = "0.3.1"
description = "Inspect retrieval results"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109",
    "jinja2>=3.1.6",
    "pillow>=11.3.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.22",
]
authors = [
    { name="Yoni Gottesman", email="yonigo10@gmail.com" }
]
[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "mypy>=1.16.1",
    "ruff>=0.12.2",
]


[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "gesserit"
module-root = ""
source-include = ["gesserit/templates/**", "gesserit/static/**"]

[project.urls]
Repository = "https://github.com/yonigottesman/gesserit"
